# bitpack

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  appveyor.yml  conanfile.txt  early_hook.cmake  readme.org
include/bitpack/: bitpack.hpp  bits.hpp  macros.hpp  maybe_get.hpp  niebloids.hpp  pair.hpp  tagged_ptr.hpp  traits.hpp  unfiled.hpp  variant_ptr.hpp  workaround.hpp
src/: CMakeLists.txt
src/include/: bitpack.hpp
src/include/bitpack/: bitpack.hpp  bits.hpp  macros.hpp  maybe_get.hpp  niebloids.hpp  pair.hpp  tagged_ptr.hpp  traits.hpp  variant_ptr.hpp  workaround.hpp
tests/: CMakeLists.txt  test.cpp
